bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
var x:Boolean = false
^BDR:3: error: ')' expected but '=' found.
  if (litMessage():String = R ) {droite();avance()}
                          ^BDR:4: error: illegal start of simple expression
  if (litMessage():String = L)  {gauche();avance()}
                  ^